Modified the db schema

--- a/src/backend/config.ini
+++ b/src/backend/config.ini
@@ -1,7 +1,8 @@
 [DATABASE]
 dbms=sqlite
 database_file=store.db
-data_repository = "C:\Users\Tata\dev\python\cetic\simpleStore\data"
+data_repository = C:\Users\Tata\dev\python\cetic\simpleStore\data
+schema_file=store.db.schema.sql
 
 
 [APPLICATION]
